# src/behavior/dto/evaluate-behavior-log.dto.ts
@@ -1,0 +1,16 @@
+import { IsBoolean, IsOptional, IsString } from 'class-validator';
+
+export class EvaluateBehaviorLogDto {
+  @IsBoolean()
+  mgrEvalDeepQ: boolean;
+
+  @IsBoolean()
+  mgrEvalFullCons: boolean;
+
+  @IsBoolean()
+  mgrEvalFollow: boolean;
+
+  @IsOptional()
+  @IsString()
+  managerFeedback?: string;
+}
